# pingcap-talent-plan

./: .gitignore
project-1/: Cargo.toml
project-1/src/: lib.rs
project-2/: Cargo.toml  README.md
project-2/src/: error.rs  lib.rs
project-2/tests/: tests.rs
