[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tempfile = "3.15.0"
thiserror = "2.0.9"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
